--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,32 @@
-.textArea {
-        transition: box-shadow 0.3s ease; /* gölge efektinin mause çıktıntan veya girdikten sonra kaç sn duracağını belirler 0/
+#dailyNote {
+        transition: box-shadow 0.3s ease; /* gölge efektinin mause çıktıntan veya girdikten sonra kaç sn duracağını belirler */
+        border-radius: 30px;
+        margin-left: 1060px;
+        background-color: bisque;
+
 }
-textarea:hover {
+#dailyNote:hover {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3); /* Gölge efekti */
+
   }
 /* textarea ya fare üzerine geldiğinde gölge efekti koymasını sağlar      */
+.box {
+    width: 230px; 
+    height: 200px; 
+    background-color: bisque; 
+    border: 1px solid black; 
+    border-radius: 10px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    overflow: hidden;
+    color: white;
+  }
+#header {
+    margin-left: 1150px;
+    color: bisque;
+
+}
+.saveBtn {
+    cursor: pointer;
+    border-radius: 10px;
+
+}
