en son kaldığım yer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,5 +28,8 @@
 .saveBtn {
     cursor: pointer;
     border-radius: 10px;
+    background-color: transparent;
+    color: white;
+    margin-left: 1330px;
 
 }
